
v0.7.0 (19 Jun 2011)
====================
 * The "we can use ICQ again!" release
 * Blocked ICQ auth requests no longer lead to popup windows (pidgin >= 2.8.0)
 * Fixed a logic error that would cause the user info dialog not to be shown
   automatically when suppression of repeated auth requests was disabled
 * Added option to block authorization requests that contain hyperlinks
 * Corrected text for the "Suppress repeated authorization requests" option
 * Changed license to GPLv3
 * Added Russian translation (thanks to Anatoliy Kozlov)
 * Code cleanup

v0.6.4 (04 Nov 2010)
====================
 * The "hey, i *know* you" release
 * Fixed an issue where known buddies would be bot checked
 * Fixed the Windows installer

v0.6.3 (11 Jul 2010)
====================
 * The "sprechen Sie deutsch?" release
 * Thanks to the #pidgin-de community for suggestions and testing
 * Added German translation from Mario Siegmann
 * Re-arranged configuration options into tabs
 * Show the correct version number on Windows
 * Fixed a segfault when removing users from the plugin's block list

v0.6.2 (09 Jul 2010)
====================
 * The "and we're back" release
 * pidgin-privacy-please is now translatable
 * Accept all messages that belong to existing conversations
 * Added option to specifically block OSCAR (ICQ/AIM) authorization requests
 * Added option to block people using a regular expression
 * Added option to block messages using a regular expression
 * Added challenge-response bot-check

v0.6.1 (22 Oct 2009)
====================
 * The "say NULL to drugs" release
 * Fixed an issue that caused a segfault when right-clicking contact gruops

v0.6.0 (25 Aug 2009)
====================
 * The "return of the funny names" release
 * We now block people ourselves instead of (ab)using pidgin's privacy options
 * Added support for blocking AOL system messages

v0.5.4 (24 Jul 2009)
====================
 * Thanks to paul.aurich for his bug report